2001-12-20  Kevin Buettner  <kevinb@redhat.com>

	* arm-tdep.c (arm_init_extra_frame_info): Add special case for
	call dummies.
	(arm_frame_saved_pc): Likewise.
	(arm_push_dummy_frame): Make sure all of the GPRs are saved.
	(arm_pop_frame): Eliminate special case for call dummies.  It
	is no longer needed now that the frame info is being properly
	initialized.

2001-12-20  Michael Snyder  <msnyder@redhat.com>

	* maint.c (maintenance_info_sections): Pass string argument to
	print_section_table, so that it can be used to select sections.
	(print_section_table): Change PTR to void *.  Look at string arg
	to select sections by name and by flag attributes.
	(match_bfd_flags): New function.
	(print_bfd_flags): New function.

Thu Dec 20 11:37:50 2001  Jeffrey A Law  (law@redhat.com)

	* cli/cli-decode.c (add_cmd): Initialize pre_show_hook in
	the new command.

2001-12-20  Andrew Cagney  <ac131313@redhat.com>

	* remote.c (struct packet_reg): Add field in_g_packet.
	(struct remote_state): Rename field g_packet to regs;
	(free_remote_state): Update.
	(init_remote_state): Add pseudo-registers to table.  Initialize
	in_g_packet.  Drop sentinal from table.
	(packet_reg_from_regnum, packet_reg_from_pnum): Update.
	(remote_fetch_registers): Handle registers not in the g-packet.
	(remote_store_registers): Ditto.

2001-12-20  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (TARGET_CHAR_SIGNED): Do not specify the print
	format.

2001-12-19  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c (s390_pop_frame_regular): Make sure the saved_regs
	array is actually set before we try to use it.

	* s390-tdep.c (s390_frame_saved_pc_nofix): If we get the saved PC
	out of the return address register, cache that in the frame's
	extra info, just as if we'd gotten it from the saved regs array;
	that way, it's not a lie to set the saved_pc_valid flag.

	* s390-tdep.c (s390_get_frame_info): Give orig_sp a reasonable
	value, even when fextra_info->stack_bought can't be trusted,
